styles/styles.css
*, *::before, *::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  font-family: 'Roboto', sans-serif;
}

header {  
  background-color: #1f2937;
  /* display: flex; */
  /* justify-content: space-evenly; */
}

nav {
  max-width: 1000px;
  padding: 0.5rem 2rem;
  width: 100%;
  margin: 0 auto;
}

ul {
  list-style: none;
  display: flex;
  gap: 1.5rem;
  padding: 0;
  margin: 0;
  align-items: baseline;
}

a {
  text-decoration: none;
  color: white;
}

.header-logo {
  margin-right: auto;
  font-size: 24px;
  font-weight: 600;
  color: #f9faf8;
}

.hero-container {
  display: flex;
  /* flex-wrap: wrap; */
  color: white;
  background-color: #1f2937;
  padding: 6rem 2rem;
  margin: 0;
  gap: 2rem;
  justify-content: center;
  align-items: center;
  width: 100%;
  /* max-width: 1000px; */
}

.hero-main-text {
  font-size: 48px;
  font-weight: 900;
  color: #f9faf8;
}

.secondary-text {
  font-size: 18px;
  color: #e5e7eb;
}

.container {
  max-width: 500px;
  min-height: 300px;
  display: flex;
}

.text-container {
  flex-direction: column;
  gap: 1rem;
  align-items: flex-start;
}

.image-container {
  background-color: gray;
  padding: 5rem;
  align-items: center;
  justify-content: center;
  
}

button {
  background-color: #3882f6;
  color: white;
  font-size: 18px;
  border: none;
  border-radius: 5px;
  padding: 0.5rem 1.5rem;
  flex-grow: 0;
}

